package com.ptsecurity.appsec.ai.ee.utils.json.report.vulnerability.details;

import com.fasterxml.jackson.annotation.JsonProperty;

public class Place {
    @JsonProperty("BeginLine")
    protected Integer beginLine;
    @JsonProperty("BeginColumn")
    protected Integer beginColumn;
    @JsonProperty("EndLine")
    protected Integer endLine;
    @JsonProperty("EndColumn")
    protected Integer endColumn;
    @JsonProperty("File")
    protected String file;
    @JsonProperty("Value")
    protected String value;
}
