package com.ptsecurity.appsec.ai.ee.utils.json.report.vulnerability.details;

import com.fasterxml.jackson.annotation.JsonProperty;

public class Ticket {
    @JsonProperty("TicketId")
    protected String ticketId;
    @JsonProperty("ProjectId")
    protected String projectId;
    @JsonProperty("TrackerType")
    protected String trackerType;
    @JsonProperty("ConnectionId")
    protected String connectionId;
}
