package com.ptsecurity.appsec.ai.desktop.utils.report.generator.domain;

import com.fasterxml.jackson.annotation.JsonProperty;
import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlElementWrapper;
import lombok.Getter;
import lombok.Setter;

import java.util.List;

@Getter @Setter
public class BaseVulnerability {
    @JsonProperty("IsFavorite")
    private boolean favorite;
    @JsonProperty("IsSuspected")
    private boolean suspected;
    @JsonProperty("IsSuppressed")
    private boolean suppressed;
    @JsonProperty("IsNew")
    private boolean newVulnerability;

    @JsonProperty("ApprovalState")
    private int approvalState;

    @JsonProperty("Type")
    private Type type;

    @JsonProperty("Level")
    private Level level;
    @JsonProperty("SourceFile")
    private String sourceFile;
    @JsonProperty("ParentItem")
    private String parentItem;

    @JacksonXmlElementWrapper(useWrapping = false)
    @JsonProperty("OWASP")
    private List<OWASP> owasp;
    @JacksonXmlElementWrapper(useWrapping = false)
    @JsonProperty("OWASPM")
    private List<OWASPM> owaspm;
    @JacksonXmlElementWrapper(useWrapping = false)
    @JsonProperty("SANS")
    private List<SANS> sans;
    @JacksonXmlElementWrapper(useWrapping = false)
    @JsonProperty("CWE")
    private List<String> cwe;
    @JacksonXmlElementWrapper(useWrapping = false)
    @JsonProperty("PCIDSS")
    private List<PCIDSS> pcidss;
    @JacksonXmlElementWrapper(useWrapping = false)
    @JsonProperty("Nist")
    private List<Nist> nist;

    private GlossaryItem glossary;
}
