package com.ptsecurity.appsec.ai.desktop.utils.report.generator.domain;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import com.fasterxml.jackson.annotation.JsonProperty;
import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlElementWrapper;
import lombok.Getter;
import lombok.Setter;

import java.util.List;

@Getter @Setter
public class Vulnerability extends BaseVulnerability {
    @JsonProperty("Function")
    private String function;
    @JsonProperty("TrimmedFunction")
    private String trimmedFunction;
    @JsonProperty("Entry")
    private String entry;
    @JsonProperty("VulnerableCode")
    private String vulnerableCode;
    @JsonProperty("ScanMode")
    private String scanMode;

    @JsonProperty("IsPotential")
    private boolean potential;
    @JsonProperty("IsSecondOrder")
    private boolean secondOrder;
    @JsonProperty("AdditionalConditions")
    private String additionalConditions;

    @JsonProperty("Place")
    private String place;
}
